# D4Counting

./: .gitignore  LICENSE  README.md  expectednumber.py  pyproject.toml  splittingtypes.py
d4counting/: cli.py  expected_number.py  splitting_types.py
tests/: test_splitting_types.py
