[tool.poetry]
name = "d4counting"
version = "0.1.0"
description = "Code for The Number of D4 Fields Ordered by Conductor"
license = "MIT"
authors = [
    "Kevin H. Wilson <kevin_wilson@brown.edu>",
    "Ila Varma",
    "S. Ali Altuğ",
    "Arul Shankar"
]

[tool.poetry.dependencies]
python = "^3.7"
sympy = "^1.6"

[tool.poetry.scripts]
d4counting = "d4counting.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
